HTML CSS mini project

--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,333 @@
+body{
+    background-image: linear-gradient(153deg, #b92b27 0%, #1565C0 150%);
+}
+.nav li{
+float:left;
+list-style: none;
+margin: 0px 1px 17px 8px;
 
+}
+.nav li a{
+    text-decoration: none;
+    margin: 0px 78px;
+   color: rgb(52, 48, 48);
+   font-weight:800;
+
+
+}
+.nav li a:hover{
+   /* color: whitesmoke; */
+   font-size: large;
+}
+nav{
+    background-color:greenyellow;
+    overflow: auto;
+    margin: 61px 6px;
+    border-radius: 36px;
+}
+.Name1{
+    color: whitesmoke;
+    margin-top: 52px;
+    margin-bottom: -23px;
+}
+.container{
+    position: relative;
+    
+}
+#backgroundImage{
+    height: 500px;
+    width: 1200px;
+    margin-left: 70px;
+    box-shadow:  0 2px 5px 0 rgba(0,0,0,.25),0 3px 10px 0 rgba(0,0,0,.2)!important;
+    position: relative;
+}
+#myImage{
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    border-radius: 100px;
+    padding: 0.2rem;
+    background-color: whitesmoke;
+   left: 43%;
+   top: 5%;
+}
+#myImage:hover{
+  width: 220px;
+  height: 220px; 
+  border-radius: 150px;
+  position: absolute;
+  left: 42%;
+  top: 4%;
+  background-color: rgb(7, 7, 7);
+}
+.nameProfile {
+    position: absolute;
+top: 45%;
+left: 42%;
+color: white;
+}
+
+.icons span:hover{
+background-color: whitesmoke;
+}
+.icons ul{
+    position: absolute;
+    top: 77%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+
+}
+.icons ul li{
+    list-style: none;
+    margin: 0px 30px;
+}
+.icons ul li .fa-brands{
+    font-size: 30px;
+    transition: .6s;
+    /* color: rgb(169, 42, 42); */
+    color: whitesmoke;
+    line-height: 60px;
+}
+.icons ul li .fa-brands:hover{
+color: #fff;
+}
+.icons ul li a{
+    position: relative;
+    display: block;
+    height: 60px;
+    width: 60px;
+    border-radius: 50%;
+    /* background-color: #fff; */
+    text-align: center;
+    transition: .3s;
+    box-shadow: 0 5px 4px rgba(0,0,0,.5);
+}
+.icons ul li a:hover{
+    transform: translate(0,-20px);
+}
+.fa-linkedin{
+  background-color: #0077b5;
+  height: 60px;
+  width: 60px;
+  border-radius: 50%;
+}
+  .fa-facebook{
+    background-color: #3b5999;
+    height: 60px;
+    width: 60px;
+    border-radius: 50%;
+  }
+  .fa-instagram{
+    background-color: #e4405f;
+    height: 60px;
+    width: 60px;
+    border-radius: 50%;
+  }
+  .fa-github{
+    background-color: #171515;
+    height: 60px;
+    width: 60px;
+    border-radius: 50%;
+  }
+  .container2{
+    position: relative;
+    height: 330px;
+    width: 1200px;
+    margin-top: 70px;
+    margin-left: 70px;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,.25),0 3px 10px 0 rgba(0,0,0,.2)!important;
+    background-color: rgb(187, 247, 227);
+  }
+  .container3{
+    position: relative;
+    height: 370px;
+    width: 1200px;
+    margin-top: 70px;
+    margin-left: 70px;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,.25),0 3px 10px 0 rgba(0,0,0,.2)!important;
+    background-color: rgb(187, 247, 227);
+  }
+  
+  #AboutMe{
+text-align: center;
+padding-top: 60px;
+padding-bottom: 20px;
+  }
+  #Education{
+    text-align: center;
+    padding-top: 60px;
+    padding-bottom: 0px;
+  }
+  #disp{
+    width: 80%;
+    text-align: center;
+    margin-left: 120px;
+    margin-right: 20px; 
+  }
+   .content1{
+    float: left;
+    margin-left: 180px;
+  } 
+  .content2{
+    float: right;
+    margin-right: 345px;
+  }
+  .content3{
+    float: left;
+    margin: 71px 6px 27px -279px;
+  }
+  .content4{
+    float: right;
+    margin: 68px -95px 33px -279px;
+  }
+  #content5{
+    float: left;
+    margin: 95px -95px 33px -279px;
+  }
+  #content6{
+    float: right;
+    margin: 95px -95px 33px -279px;
+  }
+  #content7{
+    float: left;
+    margin: 165px -95px 33px -279px;
+  }
+  #content8{
+    float: right;
+    margin: 165px -95px 33px -279px;
+  }
+  .container4{
+    position: relative;
+    height: 400px;
+    width: 590px;
+    margin-top: 70px;
+    margin-left: 70px;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,.25),0 3px 10px 0 rgba(0,0,0,.2)!important;
+    background-color: rgb(187, 247, 227);
+    float: left;
+  }
+.container4 h3{
+  margin: 20px;
+}
+.container4 li{
+  list-style: none;
+  text-align: left;
+
+}
+.range{
+  background: #353b48;
+  display: block;
+  height: 10px;
+  width: 80%;
+  border: 1px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0 ,0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  margin-left: 20px;
+
+}
+.range:hover{
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+.range span{
+  height: 20px;
+  float: left;
+  background: linear-gradient(135deg, rgba(236, 0, 140, 1)0%, rgba(252, 103, 103, 1)100%);
+}
+.html{
+  width: 90%;
+  animation: html 6s;
+}
+.css{
+  width: 85%;
+  animation: css 6s;
+}
+.javascript{
+  width: 50%;
+  animation: javascript 6s;
+}
+.nodejs{
+  width: 10%;
+  animation: nodejs 6s;
+}
+@keyframes html{
+  0%{
+    width: 0%;
+  }
+  100%{
+    width: 90%;
+  }
+}
+@keyframes css{
+  0%{
+    width: 0%;
+  }
+  100%{
+    width: 85%;
+  }
+}
+@keyframes javascript{
+  0%{
+    width: 0%;
+  }
+  100%{
+    width: 50%;
+  }
+}
+@keyframes nodejs{
+  0%{
+    width: 0%;
+  }
+  100%{
+    width: 10%;
+  }
+}
+  .container5{
+    position: relative;
+    height: 400px;
+    width: 590px;
+    margin-top: 70px;
+    margin-right: 60px;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,.25),0 3px 10px 0 rgba(0,0,0,.2)!important;
+    background-color: rgb(187, 247, 227);
+    float: right;
+  }
+ .container4, .container5{
+  text-align: center;
+  padding-top: 0px;
+  padding-bottom: 10px;
+ }
+ .fa-solid{
+  padding-right: 15px;
+  padding-left:10px ;
+ }
+ .boxleft{
+  position: relative;
+  text-align: left;
+  padding: 10px 10px 10px 10px;
+ }
+ .boxright{
+  
+ text-align: right;
+ margin: -33px 20px 45px 311px;
+  width: 250px;
+ }
+.container6{
+    height: 250px;
+    width: 1200px;
+    margin-top: 550px;
+    margin-bottom: 100px ;
+    margin-left: 70px;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,.25),0 3px 10px 0 rgba(0,0,0,.2)!important;
+    background-color: rgb(187, 247, 227);
+}
+.projects{
+  text-align: center;
+  padding-top: 30px;
+}
+.signature{
+  font-size: x-small;
+  color: whitesmoke;
+}
