--- a/styles.css
+++ b/styles.css
@@ -238,19 +238,19 @@ padding-bottom: 20px;
 }
 .html{
   width: 90%;
-  animation: html 6s;
+  animation: html 3s;
 }
 .css{
-  width: 85%;
-  animation: css 6s;
+  width: 90%;
+  animation: css 2s;
 }
 .javascript{
-  width: 50%;
-  animation: javascript 6s;
+  width: 80%;
+  animation: javascript 2s;
 }
-.nodejs{
-  width: 10%;
-  animation: nodejs 6s;
+.reactjs{
+  width: 80%;
+  animation: nodejs 3s;
 }
 @keyframes html{
   0%{
@@ -265,7 +265,7 @@ padding-bottom: 20px;
     width: 0%;
   }
   100%{
-    width: 85%;
+    width: 90%;
   }
 }
 @keyframes javascript{
@@ -273,7 +273,7 @@ padding-bottom: 20px;
     width: 0%;
   }
   100%{
-    width: 50%;
+    width: 80%;
   }
 }
 @keyframes nodejs{
@@ -281,7 +281,7 @@ padding-bottom: 20px;
     width: 0%;
   }
   100%{
-    width: 10%;
+    width: 80%;
   }
 }
   .container5{
